# Libs

./: README.md
fixed_size_stack/: main.c  stack.h  static_stack.c  static_stack_members.c  static_stack_modifiers.c
linked_list/: .gitignore  CMakeLists.txt  README.md  example.c  linked_list.h  linked_list_access.c  linked_list_add.c  linked_list_destroy.c  linked_list_modifiers.c  linked_list_remove.c  main.c
